--- a/packages/dumb-durable-object/package.json
+++ b/packages/dumb-durable-object/package.json
@@ -11,6 +11,7 @@
   ],
   "types": "dist/index.d.ts",
   "scripts": {
+    "prepublish": "pnpm build",
     "build": "tsc --project ./tsconfig.json"
   },
   "keywords": [],
