--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git status
           pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
-          pnpm -r publish --tag latest --access public
+          pnpm -r publish --tag latest --access public --publish-branch main
         env:
           NODE_AUTH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
