Update to typescript 5.0.0 and add a decorator for type checking

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "turbo": "^1.7.0"
+    "turbo": "^1.7.0",
+    "typescript": "5.0.0-beta"
   },
   "engines": {
     "node": ">=18.13.0",
