Publish ddo 0.0.7 and ddws 0.0.1

--- a/packages/dumb-durable-websocket/package.json
+++ b/packages/dumb-durable-websocket/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "dumb-durable-object",
+  "name": "dumb-durable-websocket",
   "author": "Jacob Torrång",
-  "version": "0.0.7",
+  "version": "0.0.1",
   "license": "MIT",
-  "description": "This is a package to make it easier to do rpc with your durable object by adding ways of typing and calling endpoints",
+  "description": "This is a package to more easier set up websockets with a durable object",
   "module": "dist/index.js",
   "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/mewhhaha/dumb.git",
-    "directory": "packages/dumb-durable-object"
+    "directory": "packages/dumb-durable-websocket"
   },
   "bugs": "https://github.com/mewhhaha/dumb/issues",
   "files": [
@@ -25,6 +25,7 @@
   },
   "keywords": [
     "Durable Object",
+    "WebSocket",
     "Utility",
     "Cloudflare"
   ],
