--- a/packages/dumb-durable-websocket/package.json
+++ b/packages/dumb-durable-websocket/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumb-durable-websocket",
   "author": "Jacob Torrång",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "description": "This is a package to more easier set up websockets with a durable object",
   "module": "dist/index.js",
@@ -30,8 +30,8 @@
     "Cloudflare"
   ],
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230228.0",
-    "typescript": "5.0.0-beta"
+    "@cloudflare/workers-types": "^4.20230307.0",
+    "typescript": "^5.0.2"
   },
   "engines": {
     "node": ">=18.13.0",
