--- a/packages/dumb-worker-router/package.json
+++ b/packages/dumb-worker-router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dumb-router",
+  "name": "dumb-worker-router",
   "author": "Jacob Torrång",
   "version": "0.0.1",
   "license": "MIT",
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mewhhaha/dumb.git",
-    "directory": "packages/dumb-router"
+    "directory": "packages/dumb-worker-router"
   },
   "bugs": "https://github.com/mewhhaha/dumb/issues",
   "files": [
