--- a/packages/dumb-durable-websocket/package.json
+++ b/packages/dumb-durable-websocket/package.json
@@ -31,6 +31,7 @@
   ],
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
+    "prettier": "^2.8.7",
     "typescript": "^5.0.4"
   },
   "engines": {
