--- a/packages/dumb-worker-router/package.json
+++ b/packages/dumb-worker-router/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumb-worker-router",
   "author": "Jacob Torrång",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "description": "This is a package to more easier set up a router with workers",
   "module": "dist/index.js",
@@ -36,6 +36,9 @@
     "prettier": "^2.8.7",
     "typescript": "^5.0.4",
     "vitest": "^0.30.1"
+  },
+  "peerDependencies": {
+    "dumb-typed-response": "workspace:^"
   },
   "engines": {
     "node": ">=18.13.0",
