--- a/packages/dumb-typed-response/package.json
+++ b/packages/dumb-typed-response/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dumb-typed-response",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -13,5 +13,6 @@
     "@cloudflare/workers-types": "^4.20230404.0",
     "prettier": "^2.8.7",
     "typescript": "^5.0.4"
-  }
+  },
+  "sideEffects": "false"
 }
