--- a/packages/dumb-durable-websocket/package.json
+++ b/packages/dumb-durable-websocket/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumb-durable-websocket",
   "author": "Jacob Torrång",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "license": "MIT",
   "description": "This is a package to more easier set up websockets with a durable object",
   "module": "dist/index.js",
@@ -37,5 +37,6 @@
   "engines": {
     "node": ">=18.13.0",
     "pnpm": ">=8.0.0"
-  }
+  },
+  "sideEffects": "false"
 }
