--- a/packages/dumb-worker-router/package.json
+++ b/packages/dumb-worker-router/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumb-worker-router",
   "author": "Jacob Torrång",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "MIT",
   "description": "This is a package to more easier set up a router with workers",
   "module": "dist/index.js",
@@ -43,5 +43,6 @@
   "engines": {
     "node": ">=18.13.0",
     "pnpm": ">=8.0.0"
-  }
+  },
+  "sideEffects": "false"
 }
