--- a/packages/dumb-durable-websocket/package.json
+++ b/packages/dumb-durable-websocket/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dumb-durable-websocket",
   "author": "Jacob Torrång",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "license": "MIT",
   "description": "This is a package to more easier set up websockets with a durable object",
   "module": "dist/index.js",
@@ -38,5 +38,5 @@
     "node": ">=18.13.0",
     "pnpm": ">=8.0.0"
   },
-  "sideEffects": "false"
+  "sideEffects": false
 }
