--- a/packages/dumb-typed-response/package.json
+++ b/packages/dumb-typed-response/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dumb-typed-response",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -14,5 +14,5 @@
     "prettier": "^2.8.7",
     "typescript": "^5.0.4"
   },
-  "sideEffects": "false"
+  "sideEffects": false
 }
