--- a/packages/dumb-typed-response/package.json
+++ b/packages/dumb-typed-response/package.json
@@ -1,8 +1,16 @@
 {
   "name": "dumb-typed-response",
-  "version": "0.0.4",
-  "description": "",
+  "version": "0.0.5",
+  "description": "Type responses for dumb packages",
+  "type": "module",
+  "types": "dist/index.d.ts",
   "main": "dist/index.js",
+  "files": [
+    "dist",
+    "tsconfig.json",
+    "README.md",
+    "CHANGELOG.md"
+  ],
   "scripts": {
     "build": "tsc --project tsconfig.build.json"
   },
