--- a/packages/dumb-typed-response/package.json
+++ b/packages/dumb-typed-response/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dumb-typed-response",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Type responses for dumb packages",
   "type": "module",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "files": [
     "dist",
     "tsconfig.json",
