--- a/packages/dumb-typed-response/package.json
+++ b/packages/dumb-typed-response/package.json
@@ -14,13 +14,16 @@
   ],
   "scripts": {
     "prepublish": "pnpm build",
-    "build": "tsc --project tsconfig.build.json"
+    "build": "tsc --project tsconfig.build.json",
+    "lint": "eslint **/*.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
+    "config": "workspace:^",
+    "eslint": "^8.38.0",
     "prettier": "^2.8.7",
     "typescript": "^5.0.4"
   },
