--- a/packages/dumb-worker-router/package.json
+++ b/packages/dumb-worker-router/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "prepublish": "pnpm build",
     "test": "vitest",
-    "build": "tsc --project ./tsconfig.build.json"
+    "build": "tsc --project ./tsconfig.build.json",
+    "lint": "eslint **/*.ts"
   },
   "keywords": [
     "Worker",
@@ -32,7 +33,9 @@
   ],
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
+    "config": "workspace:^",
     "dumb-typed-response": "workspace:^",
+    "eslint": "^8.38.0",
     "prettier": "^2.8.7",
     "typescript": "^5.0.4",
     "vitest": "^0.30.1"
