--- a/packages/dumb-durable-object/package.json
+++ b/packages/dumb-durable-object/package.json
@@ -23,7 +23,7 @@
     "test": "vitest",
     "prepublish": "pnpm build",
     "build": "tsc --project ./tsconfig.build.json",
-    "lint": "eslint **/*.ts"
+    "lint": "eslint src/**/*.ts"
   },
   "keywords": [
     "Durable Object",
