--- a/packages/dumb-typed-response/package.json
+++ b/packages/dumb-typed-response/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "prepublish": "pnpm build",
     "build": "tsc --project tsconfig.build.json",
-    "lint": "eslint **/*.ts"
+    "lint": "eslint src/**/*.ts"
   },
   "keywords": [],
   "author": "",
