--- a/packages/dumb-durable-websocket/package.json
+++ b/packages/dumb-durable-websocket/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "prepublish": "pnpm build",
     "build": "tsc --project ./tsconfig.build.json",
-    "lint": "eslint **/*.ts"
+    "lint": "eslint src/**/*.ts"
   },
   "keywords": [
     "Durable Object",
