--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,12 +1,10 @@
 {
   "name": "config",
-  "private": "true",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
